Minor Changes:
* Change Deprecated API usage
* Inline Variable
* Remove Unused import